Finished client CRUD, WIP Client details